[package]
name = "mdbook-lang"
version = "0.1.0"
edition = "2024"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
description = "A mdbook preprocessor enable multiple programming languages playground."
repository = "https://github.com/GaoJeffrey/mdbook-lang.git"
keywords = ["book", "gitbppk", "rustbook", "mdbook", "mkdown", "preprocessor", "playground", "multiple programming languages", "compiler server"]
authors = ["GauxuJeffrey@zzu <gaoxu.jeffrey@gmail.com>"]
exclude = ["/example/*", "/nginx/*", "/firejail/*", "/tests/*"]

[[bin]]

name = "mdbook-lang"
version = "0.1.0"
description = "A mdbook preprocessor enable multiple programming languages playground."
authors = ["GauxuJeffrey@zzu <gaoxu.jeffrey@gmail.com>"]
license = "MIT"
path = "src/main.rs"

[dependencies]
axum = {version = "0.8.4", features = ["json", "tokio"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace", "timeout", "validate-request"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.45.0", features = ["full"] }
clap = "4.5.39"
mdbook = "0.4.51"
regex = "1.10.6"
toml_edit = { version = "0.22.26" }
log = "0.4.11"
env_logger = "0.11.8"
once_cell = "1.17.1"
xshell = "0.2.7"
tempfile = "3.20.0"
daemonize = "0.5.0" 
ctrlc = "3.4.7"
signal-hook = "0.3.18"
signal-hook-tokio = {version = "0.3.1", features = ["futures-v0_3"]}
futures = "0.3.31"
futures-core = "0.3.31"
[dependencies.uuid]
version = "1.17.0"
features = [
    "v4",
]

[dev-dependencies]
assert_cmd = "2.0.17"
pretty_assertions = "1.4.0"
tempfile = "3.20.0"
